[package]
name = "twxparser"
version = "0.2.2"
edition = "2021"
authors = ["Xu Desheng <xudesheng@gmail.com>"]
license = "MIT"
description = "A parser to extract javascript or sql code from the Thingworx XML export file."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
clap = { version = "4", features = ["derive"] }
quick-xml="0.22"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
log="0.4"
env_logger = "0.9"
log4rs = "1.1"

[[bin]]
name = "twxparser"
path = "src/main.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
